# hackatime-setup

./: Cargo.toml  README.md  flake.nix  install.ps1  install.sh
.github/workflows/: release.yml
src/: config.ini.template  main.rs
src/editor_plugins/: jetbrains.rs  mod.rs  vscode.rs  xcode.rs
