[package]
name = "hackatime_setup"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.56", features = ["derive"] }
color-eyre = "0.6.5"
colored = "3.1.1"
dialoguer = "0.12.0"
dirs = "6.0.0"
indicatif = "0.18"
rayon = "1.10"
inkjet = { version = "0.11.1", default-features = false, features = [
    "language-ini",
    "theme",
    "terminal",
] }
termcolor = "1.4"
terminal_size = "0.4"
rand = "0.9"
rust-ini = "0.21.3"
jsonc-parser = { version = "0.29", features = ["cst"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = "1.16"
tempfile = "3"
which = "8.0.0"

[profile.release]
lto = true
codegen-units = 1
